@@ -1,16 +1,19 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-		<title>Version 4.11.2 ChangeLog</title>
+		<title>Version 4.11.3 ChangeLog</title>
 		<style type="text/css">
-.auto-style1 {
-	text-decoration: underline;
-}
-</style>
+            .auto-style1 {
+	            text-decoration: underline;
+            }
+        </style>
 	</head>
 	<body>
         <p>
-            <br /><span class="auto-style1">Pulse-4.11.2</span>
+            <br /><span class="auto-style1">Pulse-4.11.3</span>
+            <br />  Pulse-4.11.3
+            <br />  * Update the prediction model for Narrowband Range.
+            <br />
             <br />  Pulse-4.11.2
             <br />  * Fixed bug in DecodeCSHOW with DecodeCWPRT and only 2 parameters.
             <br />  * In AdcpSubsystemCommand, increased the number of paramater for CBI from 2 to 3. AdcpSubsystemCommands.CBI_NUM_PARAM
@@ -78,6 +81,55 @@
             <br />   - In PredictionModel, fix bug in GetBurstDataStorage() when calculating number of burst per deployment.
             <br />   - In PredictionModel, fix bug in CalculatePowerBurst() when calculating number of burst per deployment.
             <br />
+            <br /><span class="auto-style1">Pulse-Display-4.10.1</span>
+            <br />   Pulse-Display-4.10.1
+            <br />   * In PredictionModel, updated the Prediction Model to Rev Y with the Narrowband Profile range.
+            <br />
+            <br />   Pulse-Display-4.10.0
+            <br />   * Updated Prediction Model System Init Time.
+            <br />   * Fixed bug processing Nmea2Data in AdcpConnection.
+            <br />
+            <br />   Pulse-Display-4.9.0
+            <br />   - Added DisplayViewModel to handle all display view models.
+            <br />   - Updated how the Ensembles are passed to the display.
+            <br />   - In AdcpConnection, limit the file size to 16mb.
+            <br />
+            <br />   Pulse-Display-4.8.1
+            <br />   - In ScreenDataVM, added Tab description.
+            <br />   - Create DataFormatOptions to store the format options.
+            <br />   - In PulseOptions, added DataFormatOptions.
+            <br />   - In PulseManager, retreieve and save the DataFormatOptions.
+            <br />   - In AdcpConnection, use the DataFormatOptions when adding the data to the ADCP codec.
+            <br />
+            <br />   Pulse-Display-4.8.0
+            <br />   - Updated Heatmap plot with bottom track line and shade under bottom track line.
+            <br />   - In ProjectImage and ScreenMarkBadBelowBottom, Added _prevBtRange to keep a backup value of the Range.  Use it Mark Bad Below Bottom.
+            <br />
+            <br />   Pulse-Display-4.7.3
+            <br />   - Updated PredictionModel to use calculate power differently for a burst.
+            <br />
+            <br />   Pulse-Display-4.7.2
+            <br />   - In PageNaveEvents, added ViewDataGraphicalView and ViewDataTextView.
+            <br />   - In HeatmapPlotViewModel, added new default for plot as OxyPalettes.Jet(64).
+            <br />   - In AdcpConnection, return the file name when recording stops in StopValidationTest().
+            <br />   - In TimeSeriesPlotViewModel and HeatmapPlotViewModel, added MaxEnsemble to AddIncomingDataBulk() to allow a greater number then in cache.
+            <br />
+            <br />   Pulse-Display-4.7.1
+            <br />   - In PredictionModelInput, changed System Init Time from 2.4sec to 2.6sec.
+            <br />
+            <br />   Pulse-Display-4.7.0
+            <br />   - Added absorption values to prediction model.
+            <br />
+            <br />   Pulse-Display-4.6.0
+            <br />   - Removed BREAK for ADCP serial port startup.
+            <br />   - Changed System Init Time from 0.25sec to 2.4sec in Prediction Model.
+            <br />
+            <br />   Pulse-Display-4.5.0
+            <br />   - Store options for DataOutputViewModel.
+            <br />   - Store options for WpMagDirOutputViewModel.
+            <br />   - In PredictionModel, fix bug in GetBurstDataStorage() when calculating number of burst per deployment.
+            <br />   - In PredictionModel, fix bug in CalculatePowerBurst() when calculating number of burst per deployment.
+            <br />
             <br />   Pulse-Display-4.4.7
             <br />   - In ScreenDataViewModel, fixed RemovedShip to include instrument and ship transform.
             <br />   - In AdcpConnection, added AdcpUdp and removed AdcpTcp.
@@ -89,7 +141,28 @@
             <br />   - In ScreenDataViewModel, added FillInMissingWpData() to fill in data when Water Profile is turned off.
             <br />   - Change the images in PlaybackView.xaml to VisualBrushes.  This decreased startup time dramatically.
             <br />   - In DistanceTraveled, in AccumulateGps() verify a good _FirstGpsPos is set.
-            <br /><span class="auto-style1">RTI-3.4.4</span>
+            <br /><span class="auto-style1">RTI-3.4.7</span>
+            <br />   RTI-3.4.7
+            <br />   * Fixed bug in DecodeCSHOW with DecodeCWPRT and only 2 parameters.
+            <br />   * In AdcpSubsystemCommand, increased the number of paramater for CBI from 2 to 3. AdcpSubsystemCommands.CBI_NUM_PARAM
+            <br />   * Fixed bug in DecodeCSHOW with DecodeCBI() and added the interleave flag.
+            <br />   - In MathHelper, added AddColumn and AddRow for 2D arrays.
+            <br />
+            <br />   RTI-3.4.6
+            <br />   * Changed DilutionOfPrecision to not throw an exception but pass NaN.
+            <br />   * Added CBTON and CBI to deployment command list.
+            <br />
+            <br />   RTI-3.4.5
+            <br />   - Added Previous BT Range to ScreenMarkBadBelowBottom.
+            <br />   - In BottomTrackDataSet, DvlDataSet and AncillaryDataSet, added IsUpwardFacing() to know the direction the ADCP is facing.
+            <br />   - In AncillaryDataSet, added BinToDepth().
+            <br />   - In AdcpCodec, clear the buffer if the format is not being used.
+            <br />   - In Pd4_5Codec, lock the headerStart when clearing the codec.
+            <br />   - In PD4_5Codec, made it match PD0 style.
+            <br />   - In Ensemble added FileName.
+            <br />   - In NmeaDataSet, check for exceptions in SetValue() and SetNmeaStringArray().
+            <br />   - In SerialOptions, added 57600 baud rate.
+            <br />
             <br />   RTI-3.4.4
             <br />   - In InstrumentVelocityDataSet and EarthVelocityDataSet, if no Water Profile, fix bug IsBinGood() to check if the bin is good.
             <br />   - In Subsystem, added GetBeamAngle() to give the beam angle for a given subsystem.
